List View mit Fav Button

--- a/app/css/default.css
+++ b/app/css/default.css
@@ -1,1 +1,17 @@
 ﻿
+div.personText {
+    float: left;
+    margin-left: 10px;
+    margin-top: 30px;
+}
+html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figure, figcaption, hgroup, menu, header, footer, nav, section, summary, time, mark, audio, video, input {
+    border: 0 none;
+}
+div.personPhoto {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    float: left;
+    height: 106px;
+    width: 100px;
+}
