--- a/final/css/default.css
+++ b/final/css/default.css
@@ -42,3 +42,14 @@ div.speakerText {
 div.sessionLocation {
     font-size: 14px;
 }
+
+@media all and (max-width: 35em) {
+	.my-breakpoint .ui-block-a,
+	.my-breakpoint .ui-block-b,
+	.my-breakpoint .ui-block-c,
+	.my-breakpoint .ui-block-d,
+	.my-breakpoint .ui-block-e {
+		width: 100%;
+		float: none;
+	}
+}
