--- a/app/css/default.css
+++ b/app/css/default.css
@@ -61,6 +61,20 @@ div.speakLocation {
     border-radius: 0 !important;
 }
 
-p.fa {
+span.fa {
     font-size: 50px;
+}
+
+#trophy {
+    color: #ffa54f;
+    font-size: 20px;
+}
+
+.seperate {
+    margin-bottom: 4px;
+    margin-top: 4px;
+    margin-left: 4px;
+    margin-right: 4px; 
+    padding-left: 4px;
+    padding-right: 4px;
 }
