--- a/app/css/default.css
+++ b/app/css/default.css
@@ -1,4 +1,12 @@
-﻿
+﻿h1.fehler {
+    font-size: 30px;
+    color:red;
+}
+
+p.fehler{
+    text-align:center;
+}
+
 .custom-corners .ui-bar {
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
@@ -70,11 +78,3 @@ span.fa {
     font-size: 20px;
 }
 
-.seperate {
-    margin-bottom: 4px;
-    margin-top: 4px;
-    margin-left: 4px;
-    margin-right: 4px; 
-    padding-left: 4px;
-    padding-right: 4px;
-}
